sliders and forms

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -836,6 +836,7 @@ h4 {
 .feedback {
   background-color: #f7e7e6;
   padding: 9rem 0;
+	overflow-x: hidden;
 }
 .feedback-slider-item {
   padding-bottom: 5rem;
@@ -1257,6 +1258,9 @@ h4 {
   border-radius: 4px;
   transform: translateX(-50%) !important;
   padding: 3rem 6rem 4rem 6rem;
+}
+.status {
+	text-align: center;
 }
 @media (max-width: 1399px) {
   .paints {
