--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -904,23 +904,31 @@ h4 {
   border-bottom: 2px dotted #333;
 }
 .often-questions p.active-style span {
-	color: #c51abb;
-	font-weight: 900;
-	text-decoration: none;
-	border: 0;
+    color: #E950D7;
+    font-weight: 900;
+    text-decoration: none;
+    border: 0;
 }
 .often-questions .accordion-heading.active+.accordion-block {
-	display: block;
-}
-.often-questions .accordion-heading:hover span {
-	border-bottom: 2px dotted #c51abb;
+    display: block;
 }
 .often-questions .accordion-block {
-	display: none;
-  margin-top: 1rem;
   background-color: #f7e7e6;
-  padding: 3rem 4rem;
+  max-height: 0;
+  opacity: 0;
+  transition: all 0.3s ease-out;
+  overflow: hidden;
+  /* display: none; */
+  /* margin-top: 1rem; */
+  /* padding: 3rem 4rem; */
 }
+.often-questions .accordion-block.active-content {
+    overflow: visible;
+    opacity: 1;
+    padding: 3rem 4rem;
+    margin-top: 1rem;
+}
+
 .often-questions .accordion-block:before {
   content: '';
   position: absolute;
@@ -1272,11 +1280,12 @@ h4 {
   transform: translateX(-50%) !important;
   padding: 3rem 6rem 4rem 6rem;
 }
+
 .status {
-	text-align: center;
+    text-align: center;
 }
 .pageup {
-	opacity: 0;
+    opacity: 0;
 	width: 26px ;
 	height: 26px;
 	position: fixed;
@@ -1286,8 +1295,9 @@ h4 {
 	background-color: #fff;
 	cursor: pointer;
 	border: 1px solid white;
-	transition: 1s all;
+    transition: 1s all;
 }
+
 @media (max-width: 1399px) {
   .paints {
     display: none;
