--- a/src/css/main.css
+++ b/src/css/main.css
@@ -36,6 +36,7 @@ html {
 }
 body {
   font-family: 'Circe Regular', sans-serif;
+	overflow-x: hidden;
 }
 p {
   margin: 0;
@@ -432,13 +433,69 @@ h4 {
   text-align: center;
   margin-bottom: 8rem;
 }
+
+.cards-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	gap: 20px;
+}
+
 .styles-block {
+	background-color: #f7e7e6;
+	padding: 20px;
+	border-radius: 8px;
+	text-align: center;
+}
+
+.styles-block img {
+	width: 80%;
+	height: auto;
+	border-radius: 8px;
+}
+
+.styles-block img:hover {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.styles-block h4 {
+	margin-top: 10px;
+	font-size: 1.2em;
+}
+
+.styles-block a {
+	display: inline-block;
+	margin-top: 10px;
+	padding: 8px 16px;
+	background-color: #c51abb;
+	color: #fff;
+	border-radius: 5px;
+	text-decoration: none;
+	transition: background-color 0.3s ease;
+}
+
+.styles-block a:hover {
+	background-color: #a11498;
+}
+
+@media (max-width: 767px) {
+	.cards-container {
+			grid-template-columns: repeat(2, minmax(250px, 1fr));
+	}
+}
+
+@media (max-width: 479px) {
+	.cards-container {
+			grid-template-columns: repeat(1, minmax(250px, 1fr));
+	}
+}
+
+/* .styles-block {
   padding: 3rem;
   background-color: #f7e7e6;
   margin-bottom: 3rem;
 }
 .styles-block img {
-  max-width: 100%;
+	width: 100%;
   display: block;
   margin: 0 auto;
 }
@@ -454,7 +511,7 @@ h4 {
   display: block;
   text-decoration: underline;
   color: #c51abb;
-}
+} */
 .styles .button-transparent {
   margin-top: 8rem;
   margin-bottom: 6rem;
@@ -470,6 +527,7 @@ h4 {
   left: 0;
 }
 .card-block {
+	margin-top: 5%;
   background-color: #f7e7e6;
   padding-top: 7rem;
 }
@@ -831,12 +889,11 @@ h4 {
 .promo-2 img {
   max-width: 100%;
   position: relative;
-  right: -10rem;
+  right: -5%;
 }
 .feedback {
   background-color: #f7e7e6;
   padding: 9rem 0;
-	overflow-x: hidden;
 }
 .feedback-slider-item {
   padding-bottom: 5rem;
@@ -903,32 +960,11 @@ h4 {
 .often-questions .accordion-heading span {
   border-bottom: 2px dotted #333;
 }
-.often-questions p.active-style span {
-    color: #E950D7;
-    font-weight: 900;
-    text-decoration: none;
-    border: 0;
-}
-.often-questions .accordion-heading.active+.accordion-block {
-    display: block;
-}
 .often-questions .accordion-block {
+  margin-top: 1rem;
   background-color: #f7e7e6;
-  max-height: 0;
-  opacity: 0;
-  transition: all 0.3s ease-out;
-  overflow: hidden;
-  /* display: none; */
-  /* margin-top: 1rem; */
-  /* padding: 3rem 4rem; */
+  padding: 3rem 4rem;
 }
-.often-questions .accordion-block.active-content {
-    overflow: visible;
-    opacity: 1;
-    padding: 3rem 4rem;
-    margin-top: 1rem;
-}
-
 .often-questions .accordion-block:before {
   content: '';
   position: absolute;
@@ -1284,25 +1320,26 @@ h4 {
 .status {
     text-align: center;
 }
+
 .pageup {
-    opacity: 0;
-	width: 26px ;
-	height: 26px;
-	position: fixed;
-	bottom: 100px;
-	right: 5%;
-	z-index: 30;
-	background-color: #fff;
-	cursor: pointer;
-	border: 1px solid white;
-    transition: 1s all;
+  opacity: 0;
+  width: 26px ;
+  height: 26px;
+  position: fixed;
+  bottom: 100px;
+  right: 5%;
+  z-index: 30;
+  background-color: #fff;
+  cursor: pointer;
+  border: 1px solid white;
+  transition: 1s all;
 }
 
-@media (max-width: 1399px) {
+@media (max-width: 1300px) {
   .paints {
     display: none;
   }
-  .calc .file_upload > div {
+  /* .calc .file_upload > div {
     display: none;
   }
   .calc .file_upload > button {
@@ -1310,7 +1347,7 @@ h4 {
   }
   .popup-design .file_upload > div {
     display: none;
-  }
+  } */
   .popup-design .file_upload > button {
     width: 100%;
   }
